# pytest-smart-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pytest_smart_runner/: __init__.py  analyzer.py  cli.py  mapper.py  runner.py
tests/: __init__.py  test_analyzer.py  test_mapper.py
